--- a/main.html
+++ b/main.html
@@ -4,11 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.2.0/lib/p5.js"></script>
+    <script src="raycasterCode.js"></script>
   </head>
-  <script>
-    src = "raycasterCode.js";
-  </script>
-  <body>
-    //canvas API
-  </body>
+  <body></body>
 </html>
