--- a/main.html
+++ b/main.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.2.0/lib/p5.js"></script>
     <script src="raycasterCode.js"></script>
+    <link rel="stylesheet" href="styling.css">
   </head>
   <body></body>
 </html>
