added css stuff

--- a/index.html
+++ b/index.html
@@ -8,5 +8,14 @@
     <script src="raycasterCode.js"></script>
     <link rel="stylesheet" href="styling.css">
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1>Raycaster</h1>
+      <div id="controls">
+        <p>Move - WASD</p>
+        <p>Rotate right - Right arrow</p>
+        <p>Rotate left - Left arrow</p>
+      </div>
+    </header>
+  </body>
 </html>
